[package]
name = "learning-mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
